--- a/common_sensor_launch/package.xml
+++ b/common_sensor_launch/package.xml
@@ -4,6 +4,8 @@
   <name>common_sensor_launch</name>
   <version>0.42.0</version>
   <description>The common_sensor_launch package</description>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
+  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
