--- a/sample_sensor_kit_launch/package.xml
+++ b/sample_sensor_kit_launch/package.xml
@@ -2,18 +2,19 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>sample_sensor_kit_launch</name>
-  <version>0.42.0</version>
+  <version>0.1.0</version>
   <description>The sample_sensor_kit_launch package</description>
   <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
   <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
+  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
-  <exec_depend>autoware_gnss_poser</exec_depend>
-  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
-  <exec_depend>autoware_vehicle_velocity_converter</exec_depend>
   <exec_depend>common_sensor_launch</exec_depend>
+  <exec_depend>gnss_poser</exec_depend>
+  <exec_depend>pointcloud_preprocessor</exec_depend>
+  <exec_depend>tamagawa_imu_driver</exec_depend>
   <exec_depend>topic_tools</exec_depend>
   <exec_depend>ublox_gps</exec_depend>
   <exec_depend>usb_cam</exec_depend>
